# irelzk-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: addition.rs  aes256.rs  consts.rs  keccak.rs  lib.rs  main.rs  ntt.rs  params.rs  poly.rs  polyvec.rs  shake.rs
src/add/: linear.rs  product.rs
src/asm/: invntt.S  ntt.S
src/comm/: commitment.rs  opening.rs
src/crypto/: aes256.rs  shake.rs
src/poly_arith/: consts.rs  ntt.rs  poly.rs  polyvec.rs  rounding.rs
tests/: aes.rs  ntt.rs  poly.rs  shake.rs
