[package]
name = "irelzk-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rand = "0.8"

[dev-dependencies]
hex = "0.4"

[build-dependencies]
cc = "1.0.25"

[profile.release]
opt-level = 3
lto = true 
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 2

